# potato

./: .gitignore  Cargo.toml
config-examples/: pool-config-example.toml
src/: error.rs  main.rs  status.rs
src/configuration/: mod.rs
src/pool_mint/: mod.rs
src/pool_mint/mining_pool/: mod.rs  setup_connection.rs
src/pool_mint/template_receiver/: mod.rs  setup_connection.rs
src/proxy_wallet/: mod.rs
src/proxy_wallet/downstream_sv1/: diff_management.rs  downstream.rs  mod.rs
src/proxy_wallet/proxy/: bridge.rs
src/proxy_wallet/upstream_sv2/: diff_management.rs  upstream.rs  upstream_connection.rs
