[package]
authors = ["Gary Krause <garyraykrause@outlook.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "potato"
description = "just a potato for now."
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.5.1"
async-compat = "0.2.1"
async-recursion = "0.3.2"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.3.14", features = ["derive"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
futures = "0.3.25"
log = "0.4"
nohash-hasher = "0.2.0"
once_cell = "1.12.0"
pretty_env_logger = "0.5.0"
rand = "0.8.4"
serde = { version = "1.0.89", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.64", default-features = false, features = [
    "alloc",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

# Bitcoin
bitcoin = "0.29.1"
secp256k1 = { version = "0.28.2", default-features = false, features =["alloc","rand","rand-std"] }

# SV2
binary_sv2 = "^1.0.0"
buffer_sv2 = "^1.0.0"
codec_sv2 = "^1.0.0"
const_sv2 = "^3.0.0"
error_handling = "1.0.0"
framing_sv2 = "^3.0.0"
key-utils = "^1.0.0"
network_helpers_sv2 = { version = "^2.0.0", features = ["async_std", "tokio"] }
noise_sv2 = "1.2.1"
roles_logic_sv2 = "^1.0.0"
sv1_api = "^1.0.0"


[dev-dependencies]
sha2 = "0.10.6"
